# mug-club

./: Cargo.toml  Procfile  docker-compose.yml
migrations/2018-10-24-021450_beer-list/: down.sql  up.sql
migrations/2018-10-25-005127_identities/: down.sql  up.sql
migrations/2018-10-30-021116_drink-associations/: down.sql  up.sql
src/: db.rs  error.rs  main.rs  models.rs  schema.rs
src/api/: mod.rs  util.rs
