[package]
name = "mug-club"
version = "0.1.0"
authors = ["Marcus Ball <marcus.ball@live.com>"]

[dependencies]
actix-rt = "0.2.3"
actix-web = "1.0.3"
actix-cors = "0.1.0"
diesel = { version = "1.4.2", features = ["postgres","extras","chrono"] }
dotenv = "0.14.1"
derive_more = "0.15.0"
failure_derive = "0.1.5"
futures = "0.1.28"
env_logger = "0.6"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
authy = "0.9.8"
regex = "1.1"
lazy_static = "1.3"
textnonce = "0.6"