[package]
name = "mug-club"
version = "0.1.0"
authors = ["Marcus Ball <marcus.ball@live.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0-alpha.1"
actix-web = "2.0.0-alpha.1"
actix-cors = "0.2.0-alpha.1"
diesel = { version = "1.4.3", features = ["postgres","extras","chrono"] }
dotenv = "0.15.0"
derive_more = "0.99.2"
failure_derive = "0.1.6"
futures = "0.3.1"
env_logger = "0.7.1"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
authy = "0.9.8"
regex = "1.3.1"
lazy_static = "1.4.0"
textnonce = "0.7.0"